force-app/main/default/objects/LeanData__CC_Inserted_Object__c/LeanData__CC_Inserted_Object__c.object-meta.xml
<CustomObject>
    <label>CC Inserted Object</label>
    <nameField>
        <label>CC Inserted Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Inserted Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>