force-app/main/default/objects/LeanData__CC_Inserted_Object__c/fields/LeanData__Account_Routing_Logic_Key__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Account_Routing_Logic_Key__c</fullName>
    <label>Account Routing Logic Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>