force-app/main/default/objects/LeanData__CC_Inserted_Object__c/fields/LeanData__Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Campaign_Member__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Campaign Member</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>