force-app/main/default/objects/LeanData__CC_Inserted_Object__c/fields/LeanData__Convert_Lead__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Convert_Lead__c</fullName>
    <label>Convert Lead</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>