force-app/main/default/objects/LeanData__CC_Inserted_Object__c/fields/LeanData__Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Is_Processed__c</fullName>
    <label>Is Processed</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>