force-app/main/default/objects/LeanData__CC_Inserted_Object__c/fields/LeanData__Last_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Last_Attempt_Date__c</fullName>
    <label>Last Attempt Date</label>
    <type>DateTime</type>
</CustomField>