force-app/main/default/objects/LeanData__CC_Inserted_Object__c/fields/LeanData__Routing_Deployment__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Routing_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Routing Deployment</label>
    <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
    <relationshipLabel>CCIO Routing Deployment</relationshipLabel>
    <relationshipName>CCIO_Routing_Deployment</relationshipName>
    <type>Lookup</type>
</CustomField>