force-app/main/default/objects/LeanData__CC_Inserted_Object__c/listViews/LeanData__All.listView-meta.xml
<ListView>
    <fullName>LeanData__All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>LeanData__Lead__c</columns>
    <columns>LeanData__Account__c</columns>
    <columns>LeanData__Contact__c</columns>
    <columns>LeanData__Is_Processed__c</columns>
    <columns>LeanData__Is_Update__c</columns>
    <columns>LeanData__Is_Match_Relevant_Update__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>